# Chatbot-Service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  STRUCTURE.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  deps.py  routes.py
app/clients/: __init__.py  backend.py
app/core/: __init__.py  cache.py  engine.py  normalizer.py  prompt.py  types.py
app/core/providers/: __init__.py  base.py  groq.py
app/core/resolvers/: __init__.py  base.py  data.py  faq.py  greeting.py  keyword.py  mine.py  registry.py
app/data/: faq.json  intents.json
tests/: __init__.py  conftest.py  test_api.py  test_engine.py  test_resolvers.py
