[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webtutorcenter-chatbot"
version = "0.1.0"
description = "Hybrid (rule-based + AI fallback) chatbot service cho WebTutorCenter"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "groq>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear,
# C4 comprehensions, SIM simplify, BLE blind-except.
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "BLE"]

[tool.ruff.lint.per-file-ignores]
# Test được phép dùng import cục bộ trong hàm (fixtures lazy) và assert.
"tests/*" = ["E402"]

[tool.ruff.lint.flake8-bugbear]
# Depends/Header/Query trong default là pattern chuẩn của FastAPI (không phải bug).
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header", "fastapi.Query"]
